Fixed whitespace on browser

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,7 +32,7 @@ main {
 }
 
 .dropdown-toggle {
-    margin-right: 1em !important;
+    margin-right: 1.5em !important;
 }
 
 .tabs, .tabs a, footer {
